syntax = "proto3";

package livekit.proto;
option csharp_namespace = "LiveKit.Proto";

import "handle.proto";

message ParticipantInfo {
  FfiOwnedHandle handle = 1;
  string sid = 2;
  string name = 3;
  string identity = 4;
  string metadata = 5;
}