syntax = "proto3";

package livekit.proto;
option csharp_namespace = "LiveKit.Proto";

import "handle.proto";

// Create a new VideoTrack from a VideoSource
message CreateVideoTrackRequest {
  string name = 1;
  FfiHandleId source_handle = 2;
}
message CreateVideoTrackResponse {
  TrackInfo track = 1;
}

// Create a new AudioTrack from a AudioSource
message CreateAudioTrackRequest {
  string name = 1;
  FfiHandleId source_handle = 2;
}
message CreateAudioTrackResponse {
  TrackInfo track = 1;
}

///
/// Track
///

message TrackEvent {}

enum TrackKind {
  KIND_UNKNOWN = 0;
  KIND_AUDIO = 1;
  KIND_VIDEO = 2;
}

enum TrackSource {
  SOURCE_UNKNOWN = 0;
  SOURCE_CAMERA = 1;
  SOURCE_MICROPHONE = 2;
  SOURCE_SCREENSHARE = 3;
  SOURCE_SCREENSHARE_AUDIO = 4;
}

enum StreamState {
  STATE_UNKNOWN = 0;
  STATE_ACTIVE = 1;
  STATE_PAUSED = 2;
}

// TODO(theomonnom): Should we have a separate message whether the track is local or remote?

message TrackPublicationInfo {
  FfiHandleId handle = 1;
  string sid = 2;
  string name = 3;
  TrackKind kind = 4;
  TrackSource source = 5;
  bool simulcasted = 6;
  uint32 width = 7;
  uint32 height = 8;
  string mime_type = 9;
  bool muted = 10;
  bool remote = 11;
}

message TrackInfo {
  FfiHandleId handle = 1;
  string sid = 2;
  string name = 3;
  TrackKind kind = 4;
  StreamState stream_state = 5;
  bool muted = 6;
  bool remote = 7;
}

